[gd_scene load_steps=7 format=2]

[ext_resource path="res://Pacman/Cards/Card1.gd" type="Script" id=1]
[ext_resource path="res://Pacman/Cards/Card2.gd" type="Script" id=2]
[ext_resource path="res://Pacman/Cards/Card3.gd" type="Script" id=3]
[ext_resource path="res://Pacman/Cards/Card1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Pacman/Cards/Card2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Pacman/Cards/Card3.tscn" type="PackedScene" id=6]


[node name="Card" type="YSort"]

[node name="Card1" type="Area2D" parent="." instance=ExtResource( 4 )]
position = Vector2( -9, -1 )
scale = Vector2( 1.01671, 1.01671 )
script = ExtResource( 1 )

[node name="Card2" type="Area2D" parent="." instance=ExtResource( 5 )]
position = Vector2( -24, -9 )
scale = Vector2( 1.03014, 1.03975 )
script = ExtResource( 2 )

[node name="Card3" type="Area2D" parent="." instance=ExtResource( 6 )]
position = Vector2( -8, -2 )
scale = Vector2( 1.03514, 1.03514 )
script = ExtResource( 3 )
