[gd_scene load_steps=6 format=2]

[ext_resource path="res://Tiles/Card - Task1/card2.png" type="Texture" id=1]
[ext_resource path="res://World/Mini-games/Pacman/Cards/Card2.gd" type="Script" id=2]
[ext_resource path="res://Tiles/Card - Task1/setacard.png" type="Texture" id=3]
[ext_resource path="res://Tiles/Card - Task1/FundoCard.png" type="Texture" id=4]

[sub_resource type="BitmapFont" id=1]

[node name="Card2" type="Area2D"]
position = Vector2( 154, 84 )
script = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 25, 25 )
scale = Vector2( 0.1791, 0.176924 )
texture = ExtResource( 1 )

[node name="Button2" type="Button" parent="Sprite2"]
margin_left = 269.87
margin_top = 372.492
margin_right = 481.87
margin_bottom = 507.492
rect_scale = Vector2( 1.10302, 1.01018 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton" type="LinkButton" parent="Sprite2"]
margin_left = -404.836
margin_top = -37.3694
margin_right = -257.836
margin_bottom = -23.3694
rect_scale = Vector2( 5.45451, 8.58269 )
custom_fonts/font = SubResource( 1 )
text = "Bedida alcoólicas INCA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton2" type="LinkButton" parent="Sprite2"]
margin_left = -431.474
margin_top = 84.9657
margin_right = -284.474
margin_bottom = 98.9657
rect_scale = Vector2( 5.94505, 12.97 )
focus_mode = 2
custom_fonts/font = SubResource( 1 )
text = "Bedida alcoólicas INCA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 133.962, 61.5533 )

[node name="Sprite" type="Sprite" parent="Area2D"]
scale = Vector2( 0.3, 0.3 )
z_index = -1
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="Sprite2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Sprite2/Button2" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Sprite2/LinkButton" to="." method="_on_LinkButton_pressed"]
[connection signal="pressed" from="Sprite2/LinkButton2" to="." method="_on_LinkButton2_pressed"]
